--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -361,7 +361,11 @@ footer {
     mask-composite: exclude; 
 }
 
-
+.gradientFont {
+    background-image: linear-gradient(45deg, #f95bf6, #532cf9, #03f7eb);
+    background-clip: text;
+    color: transparent;
+}
 
 .logo {
     font-family: "Marhey", sans-serif;
