--- a/src/main/resources/static/css/gameStart.css
+++ b/src/main/resources/static/css/gameStart.css
@@ -30,10 +30,12 @@ header {
 
 button, a {
     transition: 0.1s;
+    
 }
 
 button:hover, a:hover {
     scale: 1.1;
+    cursor: pointer;
 }
 
 button:active, a:active {
