--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -47,6 +47,26 @@ button:active, a:active {
     scale: 0.95;
 }
 
+#logout-button {
+    font-family: "Poppins", sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    color: #ff637e;
+    text-decoration: none;
+    margin-top: 10px;
+    padding: 5px 10px;
+    border-radius: 8px;
+    border: 2px solid #ff637e;
+    display: inline-block;
+    transition: 0.1s;
+}
+
+#logout-button:hover {
+    background-color: #ff637e;
+    color: #fcffff;
+    scale: 1.05;
+}
+
 /* HEADER */
 
 header a {
